@@ -613,6 +613,7 @@ wxGTK:
 - Make key event handling consistent with wxMSW (John Rails).
 - Fix printing in landscape mode (Marcin Wojdyr).
 - Fix path selection in wx{File,Dir}Dialog with GTK+ > 2.24.10 (obfuscated).
+- Make "More windows..." menu item in MDI "Window" menu actually work.
 
 wxMSW:
 
